--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<img src="img/user.png" alt="alt">
 		<ul class="menu">
 			<li><a href="#">Home</a></li>
-			<li><a href="#">Homework</a></li>
+			<li><a href="https://github.com/ArtHouse379/Homework15.Task3" target="_blank">Homework</a></li>
 			<li><a href="#">Settings</a></li>
 		</ul>
 		<img src="img/av_64.png" alt="alt">
